# citra

./: .gitmodules  CMakeLists.txt  appveyor.yml
.travis/linux/: docker.sh  upload.sh
.travis/linux-frozen/: docker.sh
.travis/macos/: upload.sh
src/: CMakeLists.txt
src/citra/: CMakeLists.txt  stub.cpp
src/citra_cmd/: CMakeLists.txt  citra.cpp  config.cpp
src/citra_cmd/emu_window/: emu_window_sdl2.cpp
src/citra_qt/: CMakeLists.txt  discord.cpp  discord.h  main.cpp  ui_settings.h
src/citra_qt/configuration/: config.cpp  configure_web.cpp  configure_web.ui
src/core/: settings.cpp  settings.h
